--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ a {
 
 .container{
     width: 100%;
-    height: 100%;
+    height: 1024px;
     background: linear-gradient(180deg, #B06AB3 0%, #7C89FF 100%);
 }
 
@@ -130,6 +130,7 @@ textarea::placeholder {
     font-size: 24px;
     line-height: 28px;
     color: #000000;
+    cursor: pointer;
 }
 .main__left-side_choice select option {
     font-family: Roboto, sans-serif;;
@@ -151,8 +152,21 @@ textarea::placeholder {
     text-align: center;
     color: #FFFFFF;
     background: #0B6EED;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
+    outline: none;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+.main__left-side_choice button:hover {
+    background: #75ADF6;
+    transition: 0.5s;
+}
+
+.main__left-side_choice button:active {
+    background: #336AB2;
+    transition: 0.5s;
 }
 
 .footer {
