--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,9 @@ a {
     text-decoration: none;
 }
 
-.container{
+.container {
     width: 100%;
-    height: 1024px;
+    height: 100%;
     background: linear-gradient(180deg, #B06AB3 0%, #7C89FF 100%);
 }
 
@@ -80,7 +80,6 @@ a {
     justify-content: space-between;
     width: 50%;
     margin-right: 30px;
-
 }
 
 .main__left-side_textarea textarea{
