--- a/css/style.css
+++ b/css/style.css
@@ -60,22 +60,22 @@ a {
 }
 
 .header h1 {
-  margin-top: 100px;
+  margin-top: 35px;
   margin-bottom: 0;
   font-weight: 800;
   font-style: normal;
   font-size: 90px;
-  line-height: 27%;
+  line-height: 108px;
   color: #ffffff;
   text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25), 0 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .header h2 {
-  margin-top: 60px;
+  margin-top: 37px;
   font-weight: 700;
   font-style: normal;
   font-size: 50px;
-  line-height: 108%;
+  line-height: 60px;
   color: #ffffff;
   margin-bottom: 0;
 }
@@ -85,7 +85,7 @@ a {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-top: 100px;
+  margin-top: 72px;
   margin-bottom: 0;
 }
 
@@ -178,18 +178,18 @@ textarea::placeholder {
 
 .main__choice button:hover {
   background: #c06de8;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
   transition: 0.5s;
 }
 
 .main__choice button:active {
   background: #9e50c2;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
   transition: 0.5s;
 }
 
 .footer {
-  margin-top: 138px;
+  margin-top: 140px;
   margin-bottom: 82px;
   width: 85%;
   height: 90px;
