--- a/css/style.css
+++ b/css/style.css
@@ -26,23 +26,23 @@ dd {
   margin: 0;
 }
 
-body {
-  min-height: 100vh;
-  max-width: 1440px;
-  background: linear-gradient(180deg, #4568dc 0%, #af6ab3 100%), #4568dc;
-  scroll-behavior: smooth;
-  text-rendering: optimizeSpeed;
-  font-family: 'Exo 2', sans-serif;
-  margin: 0 auto;
-}
-
 a {
   outline: none;
   text-decoration: none;
 }
 
+body {
+  min-height: 100vh;
+  background: linear-gradient(180deg, #4568dc 0%, #af6ab3 100%), #4568dc;
+  scroll-behavior: smooth;
+  text-rendering: optimizeSpeed;
+  font-family: 'Exo 2', sans-serif;
+}
+
 .container {
   width: 100%;
+  max-width: 1180px;
+  margin: 0 auto;
 }
 
 .content {
@@ -57,7 +57,7 @@ a {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  width: 85%;
+  width: 100%;
 }
 
 .header h1 {
@@ -82,7 +82,7 @@ a {
 }
 
 .main {
-  width: 85%;
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -139,7 +139,8 @@ textarea::placeholder {
 }
 
 .main__choice select {
-  width: 58%;
+  width: 100%;
+  max-width: 320px;
   height: 70px;
   background: #ffffff;
   border: 2px solid #9c17db;
@@ -161,7 +162,8 @@ textarea::placeholder {
 }
 
 .main__choice button {
-  width: 40%;
+  width: 100%;
+  max-width: 223px;
   height: 70px;
   font-style: normal;
   font-weight: bold;
@@ -170,7 +172,7 @@ textarea::placeholder {
   text-align: center;
   color: #ffffff;
   background: #9c17db;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
   outline: none;
   cursor: pointer;
@@ -192,7 +194,7 @@ textarea::placeholder {
 .footer {
   margin-top: 140px;
   margin-bottom: 82px;
-  width: 85%;
+  width: 100%;
   height: 90px;
   background: #ffffff;
   border: 2px solid #9c17db;
