--- a/css/check.css
+++ b/css/check.css
@@ -32,7 +32,7 @@ body {
     text-align: center;
 }
 
-.main__back_button form input{
+.main__back_button a button{
     width: 100%;
     max-width: 223px;
     height: 66px;
@@ -44,4 +44,18 @@ body {
     font-size: 28px;
     line-height: 34px;
     color: #FFFFFF;
+    outline: none;
+    text-decoration: none;
+}
+
+.main__back_button a button:hover {
+    background: #c06de8;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    transition: 0.5s;
+}
+
+.main__back_button a button:active {
+    background: #9e50c2;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    transition: 0.5s;
 }
