--- a/css/style.css
+++ b/css/style.css
@@ -4,28 +4,6 @@
   box-sizing: border-box;
 }
 
-ul[class],
-ol[class] {
-  padding: 0;
-}
-
-body,
-h1,
-h2,
-h3,
-h4,
-p,
-ul[class],
-ol[class],
-li,
-figure,
-figcaption,
-blockquote,
-dl,
-dd {
-  margin: 0;
-}
-
 a {
   outline: none;
   text-decoration: none;
@@ -36,10 +14,11 @@ body {
   background: linear-gradient(180deg, #4568dc 0%, #af6ab3 100%), #4568dc;
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
-  font-family: 'Exo 2', sans-serif;
+
 }
 
 .container {
+  font-family: 'Exo 2', sans-serif;
   width: 100%;
   max-width: 1180px;
   margin: 0 auto;
@@ -86,7 +65,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-top: 72px;
+  margin-top: 132px;
   margin-bottom: 0;
 }
 
@@ -110,6 +89,7 @@ body {
 }
 
 .main__textarea textarea {
+  font-family: 'Exo 2', sans-serif;
   width: 100%;
   height: 240px;
   background: #f4f4f4;
@@ -139,6 +119,7 @@ textarea::placeholder {
 }
 
 .main__choice select {
+  font-family: 'Exo 2', sans-serif;
   width: 100%;
   max-width: 320px;
   height: 70px;
@@ -154,11 +135,13 @@ textarea::placeholder {
   cursor: pointer;
 }
 .main__choice select option {
+  font-family: 'Exo 2', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 24px;
   line-height: 28px;
   color: #000000;
+
 }
 
 .main__choice button {
@@ -166,6 +149,7 @@ textarea::placeholder {
   max-width: 223px;
   height: 70px;
   font-style: normal;
+  font-family: 'Exo 2', sans-serif;
   font-weight: bold;
   font-size: 28px;
   line-height: 34px;
@@ -217,7 +201,6 @@ textarea::placeholder {
 }
 
 .footer__nickname {
-  font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 24px;
@@ -225,4 +208,63 @@ textarea::placeholder {
   text-align: center;
   letter-spacing: 0.1px;
   color: #5c5c5c;
+}
+
+
+.main_check {
+  width: 100%;
+  max-width: 900px;
+  margin-top: 172px;
+}
+
+.main__block {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 130px;
+  background: #FFFFFF;
+  border: 2px solid #9C17DB;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+  border-radius: 15px;
+}
+
+.main__text h2 {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 60px;
+  line-height: 72px;
+  color: #9C17DB;
+}
+
+.main__back_button {
+  margin-top: 54px;
+  text-align: center;
+}
+
+.main__back_button a button{
+  width: 100%;
+  max-width: 223px;
+  height: 66px;
+  background: #9C17DB;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 34px;
+  color: #FFFFFF;
+  outline: none;
+  text-decoration: none;
+}
+
+.main__back_button a button:hover {
+  background: #c06de8;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  transition: 0.5s;
+}
+
+.main__back_button a button:active {
+  background: #9e50c2;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  transition: 0.5s;
 }
