--- a/css/style.css
+++ b/css/style.css
@@ -1,270 +1,270 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 a {
-  outline: none;
-  text-decoration: none;
+    outline: none;
+    text-decoration: none;
 }
 
-body {
-  min-height: 100vh;
-  background: linear-gradient(180deg, #4568dc 0%, #af6ab3 100%), #4568dc;
-  scroll-behavior: smooth;
-  text-rendering: optimizeSpeed;
-
+.wrapper {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    background: linear-gradient(180deg, #4568dc 0%, #af6ab3 100%), #4568dc;
 }
 
 .container {
-  font-family: 'Exo 2', sans-serif;
-  width: 100%;
-  max-width: 1180px;
-  margin: 0 auto;
-}
-
-.content {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
+    max-width: 1180px;
+    width: 100%;
 }
 
 .header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'Exo 2', sans-serif;
+    margin-top: 35px;
 }
 
-.header h1 {
-  margin-top: 35px;
-  margin-bottom: 0;
-  font-weight: 800;
-  font-style: normal;
-  font-size: 90px;
-  line-height: 108px;
-  color: #ffffff;
-  text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25), 0 4px 4px rgba(0, 0, 0, 0.25);
+.title {
+    text-align: center;
+    color: #ffffff;
 }
 
-.header h2 {
-  margin-top: 37px;
-  font-weight: 700;
-  font-style: normal;
-  font-size: 50px;
-  line-height: 60px;
-  color: #ffffff;
-  margin-bottom: 0;
+.title h1 {
+    font-weight: 800;
+    font-style: normal;
+    font-size: 90px;
+    line-height: 108px;
+    text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25), 0 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.title h2 {
+    margin-top: 37px;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 50px;
+    line-height: 60px;
 }
 
 .main {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin-top: 132px;
-  margin-bottom: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
-.main__right_side {
-  width: 50%;
-  margin-left: 30px;
+.sub_content {
+    width: 50%;
+    max-width: 560px;
 }
 
-.main__right_side img {
-  width: 100%;
-  height: 340px;
-  border-radius: 20px;
+.image img {
+    width: 100%;
+    height: 340px;
+    border-radius: 20px;
 }
 
-.main__left_side {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 50%;
-  margin-right: 30px;
+.textarea_form textarea {
+    font-family: 'Exo 2', sans-serif;
+    width: 100%;
+    height: 240px;
+    background: #f4f4f4;
+    border: 2px solid #9c17db;
+    border-radius: 20px;
+    outline: none;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+    padding: 30px;
 }
 
-.main__textarea textarea {
-  font-family: 'Exo 2', sans-serif;
-  width: 100%;
-  height: 240px;
-  background: #f4f4f4;
-  border: 2px solid #9c17db;
-  box-sizing: border-box;
-  border-radius: 20px;
-  outline: none;
-  padding: 30px;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 21px;
+.textarea_form textarea::placeholder {
+    color: #b1afaf;
 }
 
-textarea::placeholder {
-  color: #b1afaf;
+.submit_form {
+    margin-top: 24px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    font-family: 'Exo 2', sans-serif;
 }
 
-.main__textarea {
-  margin-bottom: 0;
+.select {
+    width: 320px;
 }
 
-.main__choice {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+.submit_form select {
+    width: 100%;
+    height: 70px;
+    background: #ffffff;
+    border: 2px solid #9c17db;
+    border-radius: 10px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 28px;
+    color: #000000;
+    cursor: pointer;
 }
 
-.main__choice select {
-  font-family: 'Exo 2', sans-serif;
-  width: 100%;
-  max-width: 320px;
-  height: 70px;
-  background: #ffffff;
-  border: 2px solid #9c17db;
-  box-sizing: border-box;
-  border-radius: 10px;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 28px;
-  color: #000000;
-  cursor: pointer;
-}
-.main__choice select option {
-  font-family: 'Exo 2', sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 28px;
-  color: #000000;
-
+.submit_form select option {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 28px;
+    color: #000000;
 }
 
-.main__choice button {
-  width: 100%;
-  max-width: 223px;
-  height: 70px;
-  font-style: normal;
-  font-family: 'Exo 2', sans-serif;
-  font-weight: bold;
-  font-size: 28px;
-  line-height: 34px;
-  text-align: center;
-  color: #ffffff;
-  background: #9c17db;
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 10px;
-  outline: none;
-  cursor: pointer;
-  transition: 0.5s;
+.btn {
+    width: 223px;
 }
 
-.main__choice button:hover {
-  background: #c06de8;
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-  transition: 0.5s;
+.btn button {
+    width: 100%;
+    max-width: 223px;
+    height: 70px;
+    font-family: 'Exo 2', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 28px;
+    line-height: 34px;
+    text-align: center;
+    color: #ffffff;
+    background: #9c17db;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    outline: none;
+    cursor: pointer;
+    transition: 0.5s;
 }
 
-.main__choice button:active {
-  background: #9e50c2;
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-  transition: 0.5s;
+.btn button:hover {
+    background: #c06de8;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    transition: 0.5s;
 }
+
+.btn button:active {
+    background: #9e50c2;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    transition: 0.5s;
+}
+
 
 .footer {
-  margin-top: 140px;
-  margin-bottom: 82px;
-  width: 100%;
-  height: 90px;
-  background: #ffffff;
-  border: 2px solid #9c17db;
-  box-sizing: border-box;
-  border-radius: 10px;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-  align-items: center;
+    margin-bottom: 82px;
+    width: 100%;
+    height: 90px;
+    background: #ffffff;
+    border: 2px solid #9c17db;
+    box-sizing: border-box;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
 }
 
 .footer__logo {
-  padding-left: 40px;
+    padding: 40px;
 }
 
 .footer__contacts ul li {
-  list-style-type: none;
-  display: inline;
-  padding-right: 25px;
+    list-style-type: none;
+    display: inline;
+    padding-right: 25px;
 }
 
 .footer__nickname {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 24px;
-  line-height: 29px;
-  text-align: center;
-  letter-spacing: 0.1px;
-  color: #5c5c5c;
+    font-style: normal;
+    font-weight: bold;
+    font-family: 'Exo 2', sans-serif;
+    font-size: 24px;
+    line-height: 29px;
+    text-align: center;
+    letter-spacing: 0.1px;
+    color: #5c5c5c;
 }
 
+/*check page*/
 
-.main_check {
-  width: 100%;
-  max-width: 900px;
-  margin-top: 172px;
+
+.main__content {
+    width: 100%;
+    max-width: 900px;
 }
 
 .main__block {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  height: 130px;
-  background: #FFFFFF;
-  border: 2px solid #9C17DB;
-  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
-  border-radius: 15px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 130px;
+    background: #FFFFFF;
+    border: 2px solid #9C17DB;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
 }
 
 .main__text h2 {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 60px;
-  line-height: 72px;
-  color: #9C17DB;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 60px;
+    line-height: 72px;
+    color: #9C17DB;
 }
 
 .main__back_button {
-  margin-top: 54px;
-  text-align: center;
+    margin-top: 54px;
+    text-align: center;
 }
 
 .main__back_button a button{
-  width: 100%;
-  max-width: 223px;
-  height: 66px;
-  background: #9C17DB;
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 10px;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 28px;
-  line-height: 34px;
-  color: #FFFFFF;
-  outline: none;
-  text-decoration: none;
+    width: 100%;
+    max-width: 223px;
+    height: 66px;
+    background: #9C17DB;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 34px;
+    color: #FFFFFF;
+    outline: none;
+    text-decoration: none;
 }
 
 .main__back_button a button:hover {
-  background: #c06de8;
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-  transition: 0.5s;
+    background: #c06de8;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    transition: 0.5s;
 }
 
 .main__back_button a button:active {
-  background: #9e50c2;
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-  transition: 0.5s;
+    background: #9e50c2;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    transition: 0.5s;
 }
+
+/*for 375px screen*/
+
+/*@media screen and (max-width: 500px){*/
+/*    .title h1 {*/
+/*        font-size: 50px;*/
+/*        line-height: 60px;*/
+/*        color: red;*/
+/*    }*/
+/*    .title h2 {*/
+/*        font-size: 16px;*/
+/*        line-height: 24px;*/
+/*    }*/
+/*}*/
