--- a/css/style.css
+++ b/css/style.css
@@ -216,6 +216,7 @@ a {
 
 .main__text h2 {
     font-style: normal;
+    font-family: 'Exo 2', sans-serif;
     font-weight: 500;
     font-size: 60px;
     line-height: 72px;
