--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,9 @@ a {
 }
 
 .container {
-    max-width: 1180px;
+    max-width: 1220px;
     width: 100%;
+    padding: 0 20px;
 }
 
 .header {
@@ -200,7 +201,8 @@ a {
 
 .main__content {
     width: 100%;
-    max-width: 900px;
+    max-width: 940px;
+    padding: 0 20px;
 }
 
 .main__block {
