--- a/css/media.css
+++ b/css/media.css
@@ -13,7 +13,6 @@
     .wrapper {
         display: flex;
         flex-direction: column;
-        flex-wrap: wrap;
         align-items: center;
     }
     .container {
@@ -63,6 +62,7 @@
         max-width: 335px;
     }
     .footer {
+        margin-top: 30px;
         margin-bottom: 30px;
         width: 100%;
         height: 187px;
@@ -102,4 +102,10 @@
         width: 100%;
         max-width: 305px;
     }
+}
+
+/*for 1180px screen*/
+
+@media screen and (max-width: 1180px){
+
 }
