--- a/css/media.css
+++ b/css/media.css
@@ -11,6 +11,7 @@
         line-height: 24px;
     }
     .wrapper {
+        height: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
