--- a/css/media.css
+++ b/css/media.css
@@ -11,12 +11,13 @@
         line-height: 24px;
     }
     .wrapper {
-        height: 100%;
+        overflow: auto;
         display: flex;
         flex-direction: column;
         align-items: center;
     }
     .container {
+        height: 100%;
         max-width: 335px;
         width: 100%;
     }
