--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ a {
 .wrapper {
     height: 100vh;
     width: 100vw;
+    overflow: auto;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
