--- a/css/media.css
+++ b/css/media.css
@@ -1,6 +1,6 @@
 /*for 700px and less screen*/
 
-@media screen and (max-width: 700px){
+@media screen and (max-width: 520px){
     .title h1 {
         font-size: 50px;
         line-height: 60px;
@@ -63,8 +63,7 @@
         max-width: 335px;
     }
     .footer {
-        margin-top: 30px;
-        margin-bottom: 30px;
+        margin: 30px auto;
         width: 100%;
         height: 187px;
         display: flex;
@@ -107,6 +106,110 @@
 
 /*for 1180px screen*/
 
-@media screen and (max-width: 1180px){
+@media screen and (max-width: 1180px) and (min-width: 520px){
+    .title h1 {
+        font-size: 70px;
+        line-height: 90px;
+    }
+    .title h2 {
+        margin-top: 14px;
+        font-size: 30px;
+        line-height: 24px;
+    }
+    .wrapper {
+        position: relative;
+        display: flex;
+        align-content: space-between;
+        flex-direction: column;
+        align-items: center;
+    }
+    .container {
+        max-width: 800px;
+        width: 100%;
+    }
+    .main {
+        margin-top: 70px;
+        display: flex;
+        flex-direction: column-reverse;
+        flex-wrap: wrap;
+        align-content: center;
+    }
+    .sub_content {
+        text-align: center;
+        width: 100%;
+        max-width: 500px;
+    }
+    .image {
+        margin-bottom: 30px;
+    }
+    .image img {
+        height: 320px;
+        border-radius: 20px;
+    }
+    .textarea_form textarea {
+        width: 100%;
+        height: 280px;
+    }
+    .submit_form {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+    .select {
+        width: 100%;
+    }
+    .btn{
+        width: 100%;
+        margin-top: 30px;
+    }
+    .btn button {
+        width: 100%;
+        max-width: 500px;
+    }
+    .footer {
+        margin: 30px auto;
+        width: 100%;
+        max-width: 500px;
+        height: 220px;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .footer__logo {
+        padding: 0;
+    }
+    .footer__contacts {
+        padding-top: 30px;
+    }
+    .footer__contacts ul li {
+        padding-right: 24px;
+        text-align: center;
+    }
+    .footer__nickname {
+        padding-top: 30px;
+        line-height: 30px;
+    }
 
+    /*check_page*/
+    .main__content {
+        max-width: 500px;
+    }
+    .main__block {
+        height: 200px;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+    .main__text h2 {
+        font-size: 24px;
+        line-height: 29px;
+    }
+    .main__back_button a button{
+        width: 100%;
+        max-width: 500px;
+    }
 }
