--- a/css/media.css
+++ b/css/media.css
@@ -86,6 +86,7 @@
 
     /*check_page*/
     .main__content {
+        margin-top: 20px;
         max-width: 335px;
     }
     .main__block {
@@ -196,6 +197,8 @@
 
     /*check_page*/
     .main__content {
+        padding: 0;
+        margin-top: 70px;
         max-width: 500px;
     }
     .main__block {
