--- a/css/media.css
+++ b/css/media.css
@@ -75,9 +75,7 @@
         padding-bottom: 0;
     }
     .footer__contacts ul li {
-        padding-right: 24px;
-        padding-bottom: 30px;
-        padding-top: 0;
+        padding: 0 10px;
     }
     .footer__nickname {
         line-height: 18px;
